WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222472
FileReader::enqueueTask should validate that its context is not stopped before executing the task
https://bugs.webkit.org/show_bug.cgi?id=222472
Summary
FileReader::enqueueTask should validate that its context is not stopped befor...
youenn fablet
Reported
2021-02-26 07:49:54 PST
FileReader::enqueueTask should validate that its context is not stopped before executing the task
Attachments
Patch
(2.37 KB, patch)
2021-02-26 08:00 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.12 KB, patch)
2021-02-26 08:20 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-02-26 07:50:54 PST
<
rdar://problem/74753571
>
youenn fablet
Comment 2
2021-02-26 08:00:23 PST
Created
attachment 421644
[details]
Patch
youenn fablet
Comment 3
2021-02-26 08:20:39 PST
Created
attachment 421650
[details]
Patch
youenn fablet
Comment 4
2021-03-01 02:23:21 PST
Ping review
EWS
Comment 5
2021-03-04 01:39:37 PST
Committed
r273881
: <
https://commits.webkit.org/r273881
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421650
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug