FileReader::enqueueTask should validate that its context is not stopped before executing the task https://bugs.webkit.org/show_bug.cgi?id=222472 Source/WebCore:

Reviewed by Alex Christensen.

The event loop might run tasks even though active dom objects are stopped.
Protect from this by adding a check since m_state checks are not sufficient.
A follow-up patch should probably try to neuter FileReader if it is stopped.

Covered by http/wpt/filereader/filereader-stop.html.

* fileapi/FileReader.cpp:
(WebCore::FileReader::fireEvent):
(WebCore::FileReader::enqueueTask):

LayoutTests:

<rdar://problem/74753571>

Reviewed by Alex Christensen.

* http/wpt/filereader/filereader-stop.html: Added.


Canonical link: https://commits.webkit.org/234842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273881 268f45cc-cd09-0410-ab3c-d52691b4dbfc